--- a/Landing page/style.css
+++ b/Landing page/style.css
@@ -11,6 +11,7 @@ header{
     height: 100vh;
     background: url();
     background-size: cover;
+    font-family: 'Poppins',sans-serif;
 }
 nav{
     width: 100%;
@@ -30,5 +31,48 @@ nav{
     color: #fff;
     padding: 10px 20px;
     font-size: 20px;
-    border-radius: ;
+}
+
+.menu a:hover{
+    border: 1px solid indianred;
+    background: transparent;
+}
+.register a{
+    text-decoration: none;
+    color: #fff;
+    padding: 10px 20px;
+    font-size: 20px;
+    border-radius: 8px;
+    background: indianred;
+}
+.register a:hover{
+    border: 1px solid indianred;
+    background: transparent;
+}
+.h-text{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    max-width: 650px;
+    transform: translate(-50%,-50%);
+    text-align: center;
+    color: #fff;
+}
+.h-text span{
+    letter-spacing: 5px;
+}
+.h-text h1{
+    font-size: 3.5em;
+}
+.h-text a{
+    text-decoration: none;
+    background: indianred;
+    padding: 10px 20px;
+    color: #fff;
+    letter-spacing: 5px;
+    transition: 0.4s;
+}
+.h-text a:hover{
+    border: 1px solid indianred;
+    background: transparent;
 }
